[tool.poetry]
name = "ym_linkcreator"
version = "0.1.0"
description = ""
authors = ["rainskin <homemadepunk@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^3.1.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
